--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "firebase": "^7.21.0",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
@@ -15,8 +17,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
